--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+body{
   background-color: #282c34;
-  min-height: 100vh;
+}
+
+:root {
+  --ball-size: calc(100vw - 20px);
+}
+
+.App {
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  background-color: #486c54;
 }
 
-.App-link {
-  color: #61dafb;
+.ball {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-position: top left;
+  border: 1px solid #eee;
+  display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ball-color-red{
+  background-color: #f00; 
+  background: radial-gradient(ellipse at top left, #ff0066, #ff6600);
+}
+
+.ball-color-green{
+  background-color: #0f0; 
+  background: radial-gradient(ellipse at top left, #00ff66, #00ff00);
+}
+
+.ball-color-blue{
+  background-color: #00f; 
+  background: radial-gradient(ellipse at top left, #0066ff, #0000ff);
+}
+
+.ball-color-yellow{
+  background-color: #ff0; 
+  background: radial-gradient(ellipse at top left, #ffff00, #ffcc00);
+}
+
+.ball-color-purple{
+  background-color: #f0f; 
+  background: radial-gradient(ellipse at top left, #ff00ff, #cc00ff);
+}
+
+.ball-color-orange{
+  background-color: #f80; 
+  background: radial-gradient(ellipse at top left, #ff6600, #ff3300);
+}
+
+.ball-color-indigo{
+  background-color: #4b0082; 
+  background: radial-gradient(ellipse at top left, #4b0082, #0000ff);
+}
+
+.ball-color-violet{
+  background-color: #ee82ee; 
+  background: radial-gradient(ellipse at top left, #ee82ee, #8a2be2);
+}
+
+.ball-color-gray{
+  background-color: #ccc; 
+  background: radial-gradient(ellipse at top left, #ccc, #666);
+}
+
+.ball-color-black{
+  background-color: #000; 
+  background: radial-gradient(ellipse at top left, #000, #333);
+}
+
+.ball-color-white{
+  background-color: #fff; 
+  background: radial-gradient(ellipse at top left, #fff, #eee);
+}
+
+.selector{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.line{
+  width: 100%;
+  display: flex;
+  flex: 1;
+  /* background-color: #eee; */
 }
